src/sass/global.scss
@import "compass/reset";


// fonts
@import "compass/css3/font-face";
@include font-face("Circular", font-files("https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/CircularStd-Bold.woff", "https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/CircularStd-Bold.ttf", "https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/CircularStd-Bold.svg"), "https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/CircularStd-Bold.eot");

// variables and sass stuff
$link-color: #3F4999;
$hover-color: #27333E;
$transition: 0.3s ease all; 
$dark: rgb(25,30,36);
$dark-alpha: rgba(25,30,36, 0.1);

$light: rgb(229,234,238);

$break-med: 1000px;
$break-sm: 760px;


@mixin vendorize($property, $value) {
  -webkit-#{$property}: $value;
  -moz-#{$property}: $value;
  -ms-#{$property}: $value;
  -o-#{$property}: $value;
  #{$property}: $value;
}

@mixin selection($color, $background) {
  ::selection {color: $color;background: $background;}
  ::-moz-selection {color: $color;background: $background;}
}

//  basics
@include selection($light,$dark);

body, html {
  padding:0;
  margin:0;
  width:100%;
  height:100% !important;
  background: #FFF;
}

img {
  max-width: 100%;
}

a, i {
  color: $dark;
  text-decoration: none;
  &:hover {
    color:  $dark;
  }
}


// spacing & grid

body {
  background: #FFF;
}

// max-width is 2000px
#wrapper {
  max-width: 2000px;
  margin: 0 auto;
}


section {
  width: 100%;
  height: 800px;
  padding: 0; 
}

.container {
  width: 100%;
  margin: 0 auto;
}

//  panel paragraphs & nav on left
$copy-left-spacing: 20px;
$text-vert-spacing: 2%;


.panel, nav {
  position: fixed; 
  visibility: hidden; 
  opacity: 0.0; 
  height: 102%; 
  width: 100%;
  max-width: 2000px;
  .container {
    position: absolute;
    width: 100%;
    .copy {
      display: block;
      h1 {
        max-width: 60% !important;
      }
      h1, p {
        max-width: 60%;
        display: block;
        margin-left: $copy-left-spacing;
        &:first-child {
          margin-top: $text-vert-spacing;
        }
      }
    }
  }
} 


.header, nav{
  visibility: visible; 
  opacity: 1.0; 
}


// nav pos
nav {
  top: $text-vert-spacing;
  text-align: right;
  height: 50px;
  width: auto;
  right: 0;
  .container { 
/*     padding-top: 20px; */
    width: auto;
    right: 0;
    text-align: center;
    width: 100px; 
  }
  a {
    padding-bottom: 22px;
    display: block;
    i {
      font-size: 1.5em !important; //
    }
  }
}


.info {
  position: fixed;
  top: 102%; 
  padding: 0;
  width: 100%; 
  height: 100%; 
  z-index: 100;
  opacity: 1; 
  visibility: visible; 
  background-color: #fff; 



  .spacer{
    height: 10%; 
  }

  .container {
    position: static; 
    margin: 0 auto;
    
    h1, h2, p {
      margin: 0 auto 2% auto;
      width: 50%;
    }
    h1 {
      font-size: 1.5em;
    }
    h2 {
      font-size: 1em;
    }
    p {
      font-size: 1.3em;
      line-height: 1.3em;
      font-weight: 400;
    } 

    @media screen and (max-width: $break-sm) {
      width: 75%;
      h1, h2, p {
        width: 70%;
      }
    }

    a {
      text-decoration: underline;
      &:hover {
        text-decoration: none;
      }
    }
    
    .footer {
      font-size: 0.7em;
      
      a img { // the lovely fabrica logo
        height: 20px; 
        vertical-align: middle; 
        padding-right: 7px; 
        margin-bottom: 1px;
      }
    }
  } 
}




// typography

$bigtext: 2.5em;

body {
  font-size: 16px;
  color: $dark;
  font-family: 'circular', helvetica, arial, sans-serif;
  font-weight: 400;
  @media screen and (-webkit-min-device-pixel-ratio : 1.5),
    screen and (min-device-pixel-ratio : 1.5), 
    screen and (max-width: $break-sm) 
  {
    font-size: 10px;
    nav {
      font-size: 200%;
/* 
      width: auto;
      a {
        padding: 35px 22px;
        &:first-child {
          padding-top: 10px;
        }
      }
 */
    }
  }
}




.header {
  h1 {
    font-size: $bigtext;
    i {
      font-size: .8em;
    }
  }
}

nav {
  a {
    color: $dark;
    text-transform: uppercase;
  }
}

.dark .container .copy p {
  max-width: 65%;
  font-size: $bigtext;
}

.panel p {
  font-size: 2em;
  line-height: 1.2em;
  i {
    font-size: 0.8em;
  }
}

.info {
  text-align: left;
  font-size: .8em;
}

footer {
  font-size: 80%;
}


// BACKGROUNDZ & STACKING

nav {
  z-index: 102;
}

.dark {
  background: $dark;
  color: $light;
  @include selection($dark,$light);
  
  a, i {
    color: $light;
    background: none;
  }
  p.second {
    margin-top: 15% !important;
    opacity: 0; 
  }
}

.light {
  background: $light;
  color: $dark;
}

.m-b {
  @extend .panel; 
  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg); 
   background-position: 50%;
  @include vendorize(background-size,cover);
}

.marlene {
  @extend .panel; 
  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_e.jpg); 
   background-position: 50%;
  @include vendorize(background-size,cover);
}

.a {
  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_a.jpg); 
}

.b1 {
  background: url(../img/mb_b-sketch1.png); 
  // z-index: 99;
}

.b2 {
  background: url(../img/mb_b-sketch2.png); 
  // z-index: 98;
}

.b3 {
  background: url(../img/mb_b-sketch3b.png); 
  // z-index: 97;
}

.b4 {
/*  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg); */
  // z-index: 96;
}

.c {
  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_c.jpg); 
}

.c2 {
  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_c2.jpg); 
}

.d {
  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_d.jpg); 
}

.a, .b1, .b2, .b3, .c, .c2, .d, .e1, .e2, .marlene, .mb{
  background-position: 50%;
  @include vendorize(background-size,cover);
}

  .fabrica-logo{
    width: 30%; 
    max-width: 120px;
    height: auto !important; 
  }

//Scroll

.scroll-container{
  position: absolute; 
  height: 80%; 
  overflow: hidden; 	
  margin-top: 5%;
  width: 100%; 
}

.ps-container{
  .ps-scrollbar-y-rail{
    position: absolute; 
    right: 25%; 
    width: 8px; 
    background-color: $dark-alpha;
    margin-right: -$copy-left-spacing; 
  }
  .ps-scrollbar-y {
    position: absolute; 
    width: 8px; 
    background-color: $dark;
  }
}

